[package]
name = "pam_okta_auth"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "PAM module for Okta"
repository = "https://github.com/flowerysong/pam_okta_auth"
publish = false

[dependencies]
pamsm = { version = "0.5", features = ["libpam"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["parse"], default-features = false }
ureq = { version = "3.0", features = ["json", "rustls"], default-features = false }
uzers = { version = "0.12", default-features = false }

[lib]
name = "pam_okta_auth"
path = "src/pam_okta_auth.rs"
crate-type = ["cdylib", "lib"]

[profile.rpm]
inherits = "release"
strip = "none"

[package.metadata.release]
push = false
pre-release-commit-message = "chore: bump version to {{version}}"
pre-release-replacements = [
    { file = "Makefile", search = "target/package/pam_okta_auth-[a-z0-9\\.-]+.crate", replace = "target/package/pam_okta_auth-{{version}}.crate", prerelease = true } ,
    { file = "packaging/deb/nfpm.yaml", search = "version: \"[a-z0-9\\.-]+\"", replace = "version: \"{{version}}\"", prerelease = true } ,
    { file = "packaging/rpm/pam_okta_auth.spec", search = "%global rawversion [a-z0-9\\.-]+", replace = "%global rawversion {{version}}", prerelease = true } ,
    { file = "doc/pam_okta_auth.8", search = ".Dd [-0-9]+", replace = ".Dd {{date}}", prerelease = true } ,
    { file = "doc/pam_okta_auth.8", search = ".Os pam_okta_auth [a-z0-9\\.-]+", replace = ".Os pam_okta_auth {{version}}", prerelease = true } ,
]
